--- a/GetStartedApp/Views/Login.axaml
+++ b/GetStartedApp/Views/Login.axaml
@@ -64,16 +64,17 @@
                   Spacing="12">
 
         <!-- Email -->
-        <TextBox Watermark="Email"
+        <TextBox Name="EmailTextBox" Watermark="Email"
                  Text="{Binding Username, Mode=TwoWay}" />
 
         <!-- Password -->
         <TextBox Watermark="Password"
                  Text="{Binding Password, Mode=TwoWay}"
-                 PasswordChar="●" />
+                 PasswordChar="●" KeyDown="PasswordTextBoxKeyDown" />
 
         <!-- Login Button -->
-        <Button Content="Log In"
+        <Button Name="LoginButton"
+                Content="Log In"
                 Command="{Binding LoginCommand}"
                 Width="120"
                 HorizontalAlignment="Center"
