--- a/GetStartedApp/Views/TasksView.axaml
+++ b/GetStartedApp/Views/TasksView.axaml
@@ -19,8 +19,8 @@
           Foreground="White"
           FontWeight="Bold"
           Padding="12,6"
-          CornerRadius="4"/>
-        <TextBox Width="200" Watermark="🔍 Search" Text="{Binding Filter, Mode=OneWayToSource}"
+          CornerRadius="4" />
+        <TextBox Width="200" Watermark="🔍 Search" Text="{Binding Filter}"
                  KeyDown="FilterTextBoxKeyDown" />
         <Button Name="FilterButton" Content="Filter" Command="{Binding FilterTasksCommand}" />
       </StackPanel>
