--- a/GetStartedApp/Views/TasksView.axaml
+++ b/GetStartedApp/Views/TasksView.axaml
@@ -23,6 +23,14 @@
           Padding="8,4"
           CornerRadius="4" />
         <Button Content="Edit" Command="{Binding EditTaskCommand}"/>
+        <Button Content="Log time"
+                Command="{Binding ShowLogTimeViewCommand}"
+                Background="#60A5FA"
+                Foreground="White"
+                FontWeight="Bold"
+                HorizontalAlignment="Right"
+                Padding="8,4"
+                CornerRadius="4" />
       </StackPanel>
 
       <ScrollViewer VerticalScrollBarVisibility="Auto">
@@ -51,13 +59,6 @@
                       <TextBlock Text="{Binding AssignedEmployee}" FontSize="12" Foreground="#111827" />
                     </StackPanel>
 
-                    <Button Content="Log time"
-                            Background="#60A5FA"
-                            Foreground="White"
-                            FontWeight="Bold"
-                            HorizontalAlignment="Right"
-                            Padding="8,4"
-                            CornerRadius="4" />
                   </StackPanel>
                 </Border>
               </DockPanel>
