Add Report Creation

--- a/GetStartedApp/App.axaml
+++ b/GetStartedApp/App.axaml
@@ -40,6 +40,9 @@
     <DataTemplate DataType="vm:LogTimeViewModel">
       <views:LogTimeView />
     </DataTemplate>
+    <DataTemplate DataType="vm:CreateReportViewModel">
+      <views:CreateReportView />
+    </DataTemplate>
   </Application.DataTemplates>
 
   <!-- 🎨 Global styling -->
