Add scrolling to projects and tasks view

--- a/GetStartedApp/Views/ProjectsView.axaml
+++ b/GetStartedApp/Views/ProjectsView.axaml
@@ -32,7 +32,7 @@
       </StackPanel>
 
       <!-- Projects List -->
-      <ScrollViewer VerticalScrollBarVisibility="Auto">
+      <ScrollViewer VerticalScrollBarVisibility="Auto" Height="700">
         <ItemsControl ItemsSource="{Binding FilteredProjects}" />
       </ScrollViewer>
 
